Spool release regime: guidance + prime surface
Documents the ratified versioning regime in writing-shared-spools.md
(accretion-only under a name, the breaking-change classification rule,
per-surface renames and the fn->root->repo escalation ladder, author test
tiers pinned at declared floors, compat-alarm convention, no-v0 policy:
untagged = WIP, v1 is the smallest promise), sweeps customisation/testing
docs to the family coordinate shape, and surfaces the run-first release
summary in the skein prime.

Squashed commits:
- c3e7ec7 docs: define the spool release promise
- a9aaa24 docs: surface spool releases in prime
- 88ab6ec docs: align guidance with family contract
- 5a15af9 docs(spools): align guidance with landed floor contracts